Atualizado classes de Album devido as novas regras de negócio, Criado classes de Cliente